--- a/.github/workflows/su.yml
+++ b/.github/workflows/su.yml
@@ -15,7 +15,7 @@ jobs:
           git checkout master
           git submodule init
           git submodule update
-          git submodule foreach git pull origin master
+          git submodule foreach git pull origin main
       - name: commit
         run: |
           git config user.name ${{ github.actor }}
