--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: make
-      run: make db_mock
+      run: make --directory=./sample/async
     - name: execute
-      run: /code/sample/db_mock/check
+      run: /code/sample/async/Test
 
