--- a/docker.node/Dockerfile
+++ b/docker.node/Dockerfile
@@ -1,7 +1,5 @@
 FROM sungyong/gtest:latest
 
 RUN apt-get update \
-  && apt-get install -q -y python-is-python3 pip golang adr-tools tig nodejs node
-
-RUN curl -fsSL https://tailscale.com/install.sh | sh \
-  && curl -s https://install.zerotier.com | sh
+  && apt-get install -q -y python-is-python3 pip golang  nodejs
+RUN npm install -g adr-tools tig nvm npx yarn
