--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,44 +1,44 @@
-# name: Docker Build
-# on: [push, pull_request]
+name: Docker Build
+on: [push, pull_request]
 
-# jobs:
-#   prepare:
-#     runs-on: ubuntu-latest
-#     outputs:
-#       tagname: ${{ steps.create_tagname.outputs.tagname }}
-#     env:
-#       CONTEXT_REF: ${{ github.ref }}
-#     steps:
-#       - name: Create tagname
-#         id: create_tagname
-#         run: |
-#           REF=${GITHUB_HEAD_REF:=${CONTEXT_REF}}
-#           NAME_=${REF#refs/heads/}
-#           NAME=${NAME_#refs/tags/}
-#           if [ "$NAME" = "master" ]; then
-#             echo "##[set-output name=tagname;]$(echo latest)"
-#           else
-#             echo "##[set-output name=tagname;]$(echo ${NAME})"
-#           fi
-#       - run: |
-#           echo ${{ steps.create_tagname.outputs.tagname }}
+jobs:
+  prepare:
+    runs-on: ubuntu-latest
+    outputs:
+      tagname: ${{ steps.create_tagname.outputs.tagname }}
+    env:
+      CONTEXT_REF: ${{ github.ref }}
+    steps:
+      - name: Create tagname
+        id: create_tagname
+        run: |
+          REF=${GITHUB_HEAD_REF:=${CONTEXT_REF}}
+          NAME_=${REF#refs/heads/}
+          NAME=${NAME_#refs/tags/}
+          if [ "$NAME" = "master" ]; then
+            echo "##[set-output name=tagname;]$(echo latest)"
+          else
+            echo "##[set-output name=tagname;]$(echo ${NAME})"
+          fi
+      - run: |
+          echo ${{ steps.create_tagname.outputs.tagname }}
 
-#   push_to_registries:
-#     runs-on: ubuntu-latest
-#     needs: prepare
-#     if: "! contains(needs.prepare.outputs.tagname, '/')"
-#     env:
-#       TAGNAME: ${{ needs.prepare.outputs.tagname }}
-#     steps:
-#       - name: Check out the repo
-#         uses: actions/checkout@v2
-#       - name: Log in to Docker Hub
-#         uses: docker/login-action@v1
-#         with:
-#           username: ${{ secrets.DOCKER_USERNAME }}
-#           password: ${{ secrets.DOCKER_PASSWORD }}
-#       - name: Push to Docker Hub
-#         uses: docker/build-push-action@v2
-#         with:
-#           push: true
-#           tags: sungyong/gtest:${{ needs.prepare.outputs.tagname }}
+  push_to_registries:
+    runs-on: ubuntu-latest
+    needs: prepare
+    if: "! contains(needs.prepare.outputs.tagname, '/')"
+    env:
+      TAGNAME: ${{ needs.prepare.outputs.tagname }}
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to Docker Hub
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: sungyong/gtest:${{ needs.prepare.outputs.tagname }}
